--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.x  # 选择您的 Go 版本
+          go-version: 1.20  # 选择您的 Go 版本
 
       - name: Run Go Vet
         run: go vet ./...
