--- a/configs/crm-layui-go.conf
+++ b/configs/crm-layui-go.conf
@@ -6,7 +6,7 @@ host = 0.0.0.0
 port = 9090
 
 [log]
-level = info
+level = debug
 filename = crm-layui-go.log
 max_size = 200
 max_age = 30
@@ -16,9 +16,9 @@ max_backups = 7
 host = 127.0.0.1
 port = 33003
 database = crm
-user = root
+user = crm
 password = 123456
 timezone = Asia/Shanghai
 max_open_conns = 100
 max_idle_conns = 10
-debug = false
+debug = true
