--- a/configs/docker-compose.yml
+++ b/configs/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   mysql-crm:
     container_name: "mysql-crm"
-    image: "mysql:5.7.39"
+    image: "mysql:8.0.21"
     ports:
       - "33003:3306"
     command: "--defaults-file=/etc/mysql/my.cnf --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci"
@@ -12,8 +12,10 @@ services:
       - MYSQL_ROOT_PASSWORD=123456
       - MYSQL_DATABASE=crm
       - MYSQL_PASSWORD=123456
+      - MYSQL_USER=crm
     volumes:
       - ~/workspace/study/crm-layui-go-env/mysql/log:/var/log/mysql
       - ~/workspace/study/crm-layui-go-env/mysql/data:/var/lib/mysql
+      - ~/workspace/study/crm-layui-go-env/mysql/mysql-files:/var/lib/mysql-files
       - ~/workspace/study/crm-layui-go-env/mysql/conf/my.cnf:/etc/mysql/my.cnf
     privileged: true
